fixed-layout navbar search and match element sizes (1h) - move toggler to the left - change navbar height - fix aligment issues - fix notification dropdowns on mobile - hide main menu on medium and smaller screens - fix search button background, color and font size - fix dashboard chart height - fix brand letter spacing and font weight - fix active nav item border width - fix navbar dropdown issues on mobile - fix drawer z-index issue

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -16,8 +16,8 @@
 }
 
 .page-banner {
-  margin-top: $navbar-height;
-  height: 300px;
+  margin-top: 80px;
+  height: 355px;
   background: theme-color('primary');
   text-align: center;
 }
