--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -3,7 +3,8 @@
 }
 
 .mdk-drawer-top-navbar {
-  margin-top: $navbar-height;
+  // margin-top: $navbar-height;
+  margin-top: 80px;
 }
 .top-navbar {
   padding-top: $navbar-height + 20px;
