--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -43,3 +43,77 @@
 @import "tickets";
 @import "ui-loaders";
 @import "ui-grid";
+
+// DROPDOWN
+
+.dropdown-toggle[data-caret="false"] {
+  &::before,
+  &::after {
+    display: none;
+  }
+}
+
+// NAVBAR
+
+.navbar {
+  height: 80px;
+}
+
+.navbar.navbar-fixed {
+  .navbar-brand {
+    letter-spacing: 0;
+    font-weight: 400;
+  }
+  .navbar-nav {
+    height: 100%;
+  }
+  .navbar-nav .nav-item {
+    display: flex;
+    align-items: center;
+    .nav-link {
+      text-transform: uppercase;
+    }
+    &.nav-active .nav-link::before {
+      border-bottom-width: 4px;
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
+    .navbar-nav.notifications .nav-item:not(:last-of-type) {
+      margin-right: .8rem;
+    }
+
+    .navbar-nav {
+      .dropdown-menu {
+        position: absolute;
+      }
+      .dropdown-menu-right {
+        right: 0;
+        left: auto;
+      }
+    }
+  }
+}
+
+.navbar .btn-search {
+  opacity: 0.2;
+  background: #d0d0d5;
+  border-radius: 100px;
+  width: 37px;
+  height: 37px;
+  color: #585969;
+  text-decoration: none;
+  i {
+    font-size: 24px;
+  }
+}
+
+.navbar .navbar-toggler {
+  margin-right: $navbar-padding-x;
+}
+
+// DRAWER
+
+.mdk-drawer {
+  z-index: 3;
+}
